--- a/templates/index.html
+++ b/templates/index.html
@@ -3,83 +3,146 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inventario de Pinturera</title>
+    <title>Inventario de Pinturería</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #121212;
+            color: #ffffff;
+            margin-top: 20px;
+        }
+
+        h1, h2, h3 {
+            text-align: center;
+            margin-bottom: 20px;
+            color: #cecece;
+        }
+
+        .container {
+            width: 80%;
+            margin: 0 auto;
+            max-width: 1200px;
+        }
+
+        .editar ul {
+            text-align: center;
+            list-style-type: none;
+            padding: 0;
+        }
+
+        .editar ul li {
+            background-color: #1e1e1e;
+            border: 1px solid #333;
+            padding: 10px;
+            margin-bottom: 10px;
+            border-radius: 5px;
+        }
+
+        .editar ul li a {
+            color: #f7f7f7;
+            text-decoration: none;
+        }
+
+        .editar ul li a:hover {
+            text-decoration: underline;
+        }
+
+        .card {
+            background-color: #1e1e1e;
+            border: 1px solid #333;
+            border-radius: 5px;
+            margin-bottom: 20px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+        }
+
+        .card-body {
+            padding: 20px;
+        }
+
+        .footer {
+            background-color: #333;
+            color: #ffffff;
+            padding: 20px 0;
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .footer p {
+            margin: 0;
+        }
+
+        .footer .contacto, .footer .lugar, .footer .derechos {
+            margin-bottom: 10px;
+        }
+
+        .logo {
+            margin-left: auto; /* Alinear el logo a la derecha */
+        }
+
+        .formulario {
+            margin-bottom: 20px;
+        }
+
+        .formulario label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: bold;
+        }
+
+        .formulario input {
+            width: calc(100% - 22px);
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #333;
+            border-radius: 5px;
+            background-color: #2c2c2c;
+            color: #ffffff;
+        }
+
+
+        .formulario button {
+            width: 100%;
+            padding: 10px;
+            background-color: #e76f60;
+            color: #121212;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+
+        .formulario button:hover {
+            background-color: #e76f60;
+        }
+
+        .btn-secondary {
+            display: block;
+            width: 100%;
+            padding: 10px;
+            background-color: #6c757d;
+            color: #ffffff;
+            text-align: center;
+            text-decoration: none;
+            border-radius: 5px;
+            margin-top: 10px;
+        }
+
+        .btn-secondary:hover {
+            background-color: #5a6268;
+        }
+
+        @media (max-width: 768px) {
+            .container {
+                width: 95%;
+            }
+
+            .btn, .formulario button, .btn-secondary {
+                font-size: 14px;
+            }
+        }
+    </style>
 </head>
 <body>
-    <style>
-    #encabezado{
-            background-color:red;
-            padding: 10px;
-            text-align: center;
-        border-bottom: 2px solid #9bc99c;
-    }
-    body{
-        background-color:white;
-        font-family:arial,sans-serif;
-        font-weight: 200;
-    }
-    .editar{
-        display: flex;
-        justify-content: left;
-        align-items: left;
-        margin: 0;
-    }
-    form label{
-        font-weight: bold;
-        display: block;
-    }
-    .formulario{
-        background-color:whitesmoke;
-        width: 80%;
-        max-width: 400px;
-        padding: 20px;
-        border-radius: 10px;
-    }
-    .formulario h3{
-        text-align: center;
-        margin-bottom: 20px;
-    }
-    .formulario label,input,button{
-        display: block;
-        width: 100%;
-        margin-bottom: 10px;
-    }
-    .formulario label{
-        font-weight: bold;
-    }
-    .formulario input{
-        padding: 8px;
-        border: 1px solid white;
-        border-radius: 5px;
-    }
-    .formulario button{
-        background-color: #007bff;
-        color:#fff;
-        border: none;
-        border-radius: 7px;
-        padding: 0.5em;
-        cursor: pointer;
-    }
-    footer{
-        background-color: #333;
-        color:#fff;
-        text-align: center;
-        padding: 10px;
-        position: relative;
-        bottom:0;
-        width: 100%;
-    }   
-    .contacto{
-        text-align: left;
-    }
-    .lugar{
-        text-align: right;
-    }
-    </style>
-
-
-
-
     <div class="container">
         <div class="row">
             <div class="col">
@@ -91,58 +154,60 @@
                     <li>
                         <a href="{{ url_for('mostrar_latas', marca_id=marca.id) }}">{{ marca.nombre }} - ${{ marca.precio_x_litro }} x litro</a>
                     </li>
-                        {% endfor %}
-                     </ul>
-                </div>
+                    {% endfor %}
+                    </ul>
                 </div>
                 <div>
-                    <!-- Formulario para agregar una marca -->
-                <div class="formulario">
-                    <div class="card">
-                        <div class="card-body">
-                            <h3>Agregar Marca</h3>
-                            <form action="/agregar_marca" method="POST">
-                                <div class="mb-3">
-                                    <label for="nombre" class="form-label">Nombre de la Marca</label>
-                                    <input type="text" id="nombre" name="nombre"required>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="precio_x_litro" class="form-label">Precio por Litro</label>
-                                    <input type="text" id="precio_x_litro" name="precio_x_litro" required>
-                                </div>
-                                <button type="submit">Agregar Marca</button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-                    <!-- Formulario para eliminar una marca -->
-                <div class="formulario">
-                    <div class="card">
-                        <div class="card-body">
-                        <h3>Eliminar Marca</h3>
-                        <form action="/eliminar_marca" method="POST">
-                            <div class="mb-3">
-                                <label for="eliminar-nombre" class="form-label">Nombre de la Marca a Eliminar</label>
-                                <input type="text" id="nombre" name="nombre" required>
+                    <div class="formulario">
+                        <div class="card">
+                            <div class="card-body">
+                                <h3>Agregar Marca</h3>
+                                <form action="/agregar_marca" method="POST">
+                                    <div class="mb-3">
+                                        <label for="nombre" class="form-label">Nombre de la Marca</label>
+                                        <input type="text" id="nombre" name="nombre" required>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="precio_x_litro" class="form-label">Precio por Litro</label>
+                                        <input type="text" id="precio_x_litro" name="precio_x_litro" required>
+                                    </div>
+                                    <button type="submit">Agregar Marca</button>
+                                </form>
                             </div>
-                            <button class="button" type="submit">Eliminar Marca</button>
-                        </form>
+                        </div>
+                    </div>
+                    <div class="formulario">
+                        <div class="card">
+                            <div class="card-body">
+                                <h3>Eliminar Marca</h3>
+                                <form action="/eliminar_marca" method="POST">
+                                    <div class="mb-3">
+                                        <label for="eliminar-nombre" class="form-label">Nombre de la Marca a Eliminar</label>
+                                        <input type="text" id="nombre" name="nombre" required>
+                                    </div>
+                                    <button class="button" type="submit">Eliminar Marca</button>
+                                </form>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
             </div>
         </div>
     </div>
     <script src="static/js/script.js"></script>
-    <footer>
+    <footer class="footer">
+
+        <div class="logo">
+            <img src="static/images/logo.png" alt="Logo de la empresa">
+        </div>
+
         <div class="derechos">
             <p>&copy;2024 Lanus Team. Todos los derechos reservados</p>
         </div>
         <div class="contacto">
-            <p>Tel:+54 9 11 58770711</p>
-            <p>Email:sseijas@fi.uba.ar</p>
-            <p>Email:saalvarez@fi.uba.ar</p>
+            <p>Tel: +54 9 11 58770711</p>
+            <p>Email: sseijas@fi.uba.ar</p>
+            <p>Email: saalvarez@fi.uba.ar</p>
         </div>
         <div class="lugar">
             <p>Av. Paseo Colón 850, C1063 Cdad. Autónoma de Buenos Aires</p>
