--- a/templates/latas.html
+++ b/templates/latas.html
@@ -3,149 +3,196 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Latas de {{ marca.nombre }}</title>
-</head>
-<body>
+    <title>Latas de la Marca</title>
     <style>
-        #encabezado{
-                background-color:red;
-                padding: 10px;
-                text-align: center;
-            border-bottom: 2px solid #9bc99c;
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #121212;
+            color: #ffffff;
+            margin-top: 20px;
         }
-        body{
-            background-color:white;
-            font-family:arial,sans-serif;
-            font-weight: 200;
-        }
-        .editar{
-            display: flex;
-            justify-content: left;
-            align-items: left;
-            margin: 0;
-        }
-        form label{
-            font-weight: bold;
-            display: block;
-        }
-        .formulario{
-            background-color:whitesmoke;
-            width: 80%;
-            max-width: 400px;
-            padding: 20px;
-            border-radius: 10px;
-        }
-        .formulario h3{
+
+        h1, h2, h3 {
             text-align: center;
             margin-bottom: 20px;
+            color: #cecece;
         }
-        .formulario label,input,button{
-            display: block;
-            width: 100%;
+
+        .container {
+            width: 80%;
+            margin: 0 auto;
+            max-width: 1200px;
+        }
+
+        .editar ul {
+            text-align: center;
+            list-style-type: none;
+            padding: 0;
+        }
+
+        .editar ul li {
+            background-color: #1e1e1e;
+            border: 1px solid #333;
+            padding: 10px;
             margin-bottom: 10px;
-        }
-        .formulario label{
-            font-weight: bold;
-        }
-        .formulario input{
-            padding: 8px;
-            border: 1px solid white;
             border-radius: 5px;
         }
-        .formulario button{
-            background-color: #007bff;
-            color:#fff;
-            border: none;
-            border-radius: 7px;
-            padding: 0.5em;
-            cursor: pointer;
+
+        .card {
+            background-color: #1e1e1e;
+            border: 1px solid #333;
+            border-radius: 5px;
+            margin-bottom: 20px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
         }
-        footer{
+
+        .card-body {
+            padding: 20px;
+        }
+
+        .footer {
             background-color: #333;
-            color:#fff;
+            color: #ffffff;
+            padding: 20px 0;
             text-align: center;
+            margin-top: 20px;
+        }
+
+        .footer p {
+            margin: 0;
+        }
+
+        .footer .contacto, .footer .lugar, .footer .derechos {
+            margin-bottom: 10px;
+        }
+
+        .formulario {
+            margin-bottom: 20px;
+        }
+
+        .formulario label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: bold;
+        }
+
+        .formulario input {
+            width: calc(100% - 22px);
             padding: 10px;
-            position: relative;
-            bottom:0;
+            margin-bottom: 10px;
+            border: 1px solid #333;
+            border-radius: 5px;
+            background-color: #2c2c2c;
+            color: #ffffff;
+        }
+
+        .formulario button {
             width: 100%;
-        }   
-        .contacto{
-            text-align: left;
+            padding: 10px;
+            background-color: #e76f60;
+            color: #121212;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
         }
-        .lugar{
-            text-align: right;
+
+        .formulario button:hover {
+            background-color: #e76f60;
         }
-        </style>
 
+        .btn-secondary {
+            display: block;
+            width: 100%;
+            padding: 10px;
+            background-color: #6c757d;
+            color: #ffffff;
+            text-align: center;
+            text-decoration: none;
+            border-radius: 5px;
+            margin-top: 10px;
+        }
 
+        .btn-secondary:hover {
+            background-color: #5a6268;
+        }
 
+        @media (max-width: 768px) {
+            .container {
+                width: 95%;
+            }
 
-
+            .btn, .formulario button, .btn-secondary {
+                font-size: 14px;
+            }
+        }
+    </style>
+</head>
+<body>
     <div class="container">
         <div class="row">
-            <div class="col"></div>
+            <div class="col">
                 <h1 id="encabezado">Latas de la Marca {{ marca.nombre }}</h1>
                 <div class="col-12 col-md-10 col-lg-6 mx-auto">
-                <div class="editar">
-                    <h2>Latas:</h2>
-                    <ul>
-                        {% for lata in latas %}
-                            <li>Nro de lata: {{lata.id}} - Tamaño: {{ lata.tamanio }}L - Precio: ${{ lata.precio }} - Color: {{ lata.color.nombre }}</li>
-                        {% endfor %}
-                    </ul>
-                </div>
+                    <div class="editar">
+                        <h2>Latas:</h2>
+                        <ul>
+                            {% for lata in latas %}
+                                <li>Nro de lata: {{ lata.id }} - Tamaño: {{ lata.tamanio }}L - Precio: ${{ lata.precio }} - Color: {{ lata.color.nombre }}</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
                     <div class="card">
                         <div class="card-body">
-                            <!-- Formulario para agregar una lata -->
-                        <div class="formulario">
-                            <h3>Agregar Nueva Lata</h3>
-                            <form action="/agregar_lata" method="POST">
-                                <div class="mb-3">
+                            <div class="formulario">
+                                <h3>Agregar Nueva Lata</h3>
+                                <form action="/agregar_lata" method="POST">
                                     <input type="hidden" id="marca_id" name="marca_id" value="{{ marca.id }}">
-                                    <label for="tamanio" class="form-label">Tamaño</label>
-                                    <input type="number" id="tamanio" name="tamanio" placeholder="Ingrese tamaño en litros"required>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="nombre_color" class="form-label">Nombre del Color</label>
-                                    <input type="text" id="nombre_color" name="nombre_color" required>
-                                </div>
-                                <button type="submit">Agregar Lata</button>
-                            </form>
-                        </div>
+                                    <div class="mb-3">
+                                        <label for="tamanio" class="form-label">Tamaño</label>
+                                        <input type="number" id="tamanio" name="tamanio" placeholder="Ingrese tamaño en litros" required>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="nombre_color" class="form-label">Nombre del Color</label>
+                                        <input type="text" id="nombre_color" name="nombre_color" required>
+                                    </div>
+                                    <button type="submit">Agregar Lata</button>
+                                </form>
+                            </div>
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-body">
-                            <!-- Formulario para eliminar una lata por numero -->
-                        <div class="formulario">
-                            <h3>Eliminar Lata por Numero</h3>
-                            <form action="/eliminar_lata" method="POST">
-                                <div class="mb-3">
-                                    <label for="lata_id" class="form-label">Nro de la lata a eliminar:</label>
-                                    <input type="number" id="lata_id" name="lata_id"required>
-                                </div>
-                                <button type="submit">Eliminar Lata</button>
-                            </form>
-                        </div>
+                            <div class="formulario">
+                                <h3>Eliminar Lata por Numero</h3>
+                                <form action="/eliminar_lata" method="POST">
+                                    <div class="mb-3">
+                                        <label for="lata_id" class="form-label">Nro de la lata a eliminar:</label>
+                                        <input type="number" id="lata_id" name="lata_id" required>
+                                    </div>
+                                    <button type="submit" class="btn btn-danger">Eliminar Lata</button>
+                                </form>
+                            </div>
                         </div>
                     </div>
+                    <a href="{{ url_for('home') }}" class="btn-secondary">Volver a la lista de marcas</a>
                 </div>
+            </div>
         </div>
     </div>
-    <a href="{{ url_for('home') }}">Volver a la lista de marcas</a>
-    <footer>
+    <footer class="footer">
+
         <div class="derechos">
             <p>&copy;2024 Lanus Team. Todos los derechos reservados</p>
         </div>
         <div class="contacto">
-            <p>Tel:+54 9 11 58770711</p>
-            <p>Email:sseijas@fi.uba.ar</p>
-            <p>Email:saalvarez@fi.uba.ar</p>
+            <p>Tel: +54 9 11 58770711</p>
+            <p>Email: sseijas@fi.uba.ar</p>
+            <p>Email: saalvarez@fi.uba.ar</p>
         </div>
         <div class="lugar">
             <p>Av. Paseo Colón 850, C1063 Cdad. Autónoma de Buenos Aires</p>
         </div>
     </footer>
-
 </body>
 </html>
